<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorfondo"
    android:padding="15dp"
    tools:context=".ejercicio3Activity">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="535dp"
        android:background="@color/colortextto"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:text="@string/lblcentromedico"
                android:textColor="@color/colorPrimary"

                />

            <Spinner
                android:id="@+id/idcentromedico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textAlignment="center" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/txtfecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblfecha"
                android:textColor="@color/colorPrimary"

                />

            <ToggleButton
                android:id="@+id/idtogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:text="@string/lbljornadalaboral"
                android:textColor="@color/colorPrimary"

                />

            <Spinner
                android:id="@+id/idjornada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorfondo">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"

                android:text="@string/lbldoctor"
                android:textColor="@color/colorPrimary"

                />

            <Button
                android:id="@+id/btnbuscardoctor"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btnbuscar"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>